# lunch-bot

./: .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.sample.yml  main.py  pylintrc.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  pylint.yml
src/: settings.py
src/scrappers/: bernard.py  bonami.py  gourmet.py  hasicka.py  leharo.py  natrati.py  pepe.py  sargam.py  ukohoutu.py  utils.py
src/services/: app_logging.py  formatters.py  lunch.py  mail.py  scheduler.py
